<resources>
    <string name="app_name">Users App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register">Registar Usuario</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="status">Estado</string>
    <string name="save">Registrar</string>
    <string name="msg">Se ha registrado el usuario correctamente. Desea registrar otro usuario?</string>
    <string name="salir">Salir</string>
    <string name="new_re">Nuevo Registro</string>
</resources>