<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.RegistroActivity">


    <TextView
        android:layout_width="match_parent"
        android:text="@string/register"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/editTextName"
        android:layout_marginTop="20dp"
        android:hint="@string/name"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/editTextLastName"
        android:layout_marginStart="20dp"
        android:hint="@string/last_name"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:id="@+id/editTextStatus"
        android:layout_marginStart="20dp"
        android:hint="@string/status"
        android:inputType="number"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:text="@string/save"
        android:id="@+id/buttonSave"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content" />

</LinearLayout>